--- a/src/scss/components/_about-item.scss
+++ b/src/scss/components/_about-item.scss
@@ -13,6 +13,7 @@
 		background: linear-gradient(95.4deg, #67F38F 4.32%, #00E540 156.01%);
 		-webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+		white-space: nowrap;
 	}
 	
 	&__text {
