--- a/src/pug/sections/header.pug
+++ b/src/pug/sections/header.pug
@@ -8,8 +8,8 @@ include ../components/lang
 		{title: page == 'ru' ? 'Как работает Бот?' : 'How the Bot works', href: '#howWork'},
 		{title: page == 'ru' ? 'Для кого подойдет?' : 'Suitable for', href: '#forWhom'},
 		{title: page == 'ru' ? 'Преимущества' : 'Benefits', href: '#advantages'},
-		{title: page == 'ru' ? 'Инвестиционные предложения' : 'Investment offers', href: '#offers'},
-		{title: page == 'ru' ? 'Отзывы': 'Reviews', href: '#reviews'}
+		{title: page == 'ru' ? 'Инвест. предложения' : 'Investment offers', href: '#offers'},
+		{title: page == 'ru' ? 'Доходность': 'Profitability', href: '#profitability'}
 	]
 
 header#header.header
