--- a/src/pug/components/howWork-item.pug
+++ b/src/pug/components/howWork-item.pug
@@ -1,5 +1,5 @@
 mixin howWorkItem(item, index)
-	li.howWork-item(class= index % 2==1 && 'even')(class= index==1 && 'second')(class= index==2 && 'third')(class= page=='en' && 'en-item')
+	li.howWork-item(class= index % 2==1 && 'even')(class= index==1 && 'second')(class= index==2 && 'third')(class= page=='en' && 'en-item')(data-howWorkItem-title)
 		h3.howWork-item__num= item.number
 		.howWork-item__main
 			h3.howWork-item__title= item.title
