--- a/src/scss/components/_menu.scss
+++ b/src/scss/components/_menu.scss
@@ -1,55 +1,85 @@
 .menu {
-	position: fixed;
-	z-index: 999;
+  position: fixed;
+  z-index: 999;
   transform: translateX(-100%);
-	transition: $transition;
-	background-color: $black;
-	width: 100%;
-	height: calc(100vh - 90.5px);
-	top: 90.5px;
-	right: 0;
-	bottom: 0;
-	left: 0;
-	@include flex(center, center);
-	&.active {
-		transform: translateX(0);
-	}
-	&__list {
-		display: flex;
-		flex-direction: column;
-	}
-  &__list-item {
-    line-height: 45px;
-    font-family: $HelveticaNeueRegular, sans-serif;
-    color: $white;
-		white-space: nowrap;
-		text-align: center;
-		cursor: pointer;
-		transition: $transition;
-    &:hover {
-      color: $green;
-    }
+  transition: $transition;
+  background-color: $black;
+  width: 100%;
+  height: calc(100vh - 90.5px);
+	padding: 10px;
+  top: 90.5px;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  @include flex(center, center);
+  &.active {
+    transform: translateX(0);
   }
-	&__list-item:not(:first-child) {
-		margin-top: 48px;
+  &__list {
+    display: flex;
+    flex-direction: column;
+  }
+  &__list-item--mobile {
+		width: calc(100vw - 20px);
+    padding: 29px 0;
+    @include flex(flex-start, flex-start);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.22);
+  }
+  &__list-item__num {
+    color: $green;
+    font-size: 10px;
+    line-height: 14px;
+		word-break: normal;
+  }
+  &__list-item__link {
+		font-family: $BenzinRegular, sans-serif;
+    font-size: 20px;
+    line-height: 27.58px;
+    margin-left: 12px;
+  }
+  &__list-item {
+    display: none;
+  }
+  &__list-item:not(:first-child) {
+    margin-top: 48px;
+  }
+
+	@include tablet {
+		&__list-item--mobile {
+			width: 60vw;
+		}
 	}
 
   @include desktop {
-		height: auto;
-		max-width: 618px;
-		position: static;
-		background-color: transparent;
-		transform: translateX(0);
-		&__list {
-			width: 100%;
-			flex-direction: row;
-			justify-content: space-between;
-		}
-		&__list-item {
+    height: auto;
+    max-width: 618px;
+    position: static;
+    background-color: transparent;
+    transform: translateX(0);
+    &__list {
+      width: 100%;
+      flex-direction: row;
+      justify-content: space-between;
+    }
+    &__list-item--mobile {
+      display: none;
+    }
+    &__list-item {
+      display: block;
+      font-size: 16px;
       line-height: 47px;
-		}
+      font-family: $HelveticaNeueRegular, sans-serif;
+      color: $white;
+      white-space: nowrap;
+      text-align: center;
+      cursor: pointer;
+      transition: $transition;
+      &:hover {
+        color: $green;
+      }
+    }
     &__list-item:not(:first-child) {
-			margin-top: 0;
+      margin-top: 0;
     }
   }
 }
@@ -60,25 +90,25 @@
   flex-direction: column;
   width: 32px;
   height: 25px;
-	cursor: pointer;
+  cursor: pointer;
   span {
     width: 100%;
     height: 1.5px;
     background-color: $white;
-		transition: $transition;
+    transition: $transition;
   }
-	&.active {
-		span:first-child {
-			transform: translateY(12px) rotate(45deg);
-		}
-		span:nth-child(2) {
-			opacity: 0;
-			transform: translateX(100%);
-		}
-		span:last-child {
-			transform: translateY(-12px) rotate(-45deg);
-		}
-	}
+  &.active {
+    span:first-child {
+      transform: translateY(12px) rotate(45deg);
+    }
+    span:nth-child(2) {
+      opacity: 0;
+      transform: translateX(100%);
+    }
+    span:last-child {
+      transform: translateY(-12px) rotate(-45deg);
+    }
+  }
 
   @include desktop {
     display: none;
