--- a/src/scss/sections/_profitability.scss
+++ b/src/scss/sections/_profitability.scss
@@ -33,6 +33,14 @@
     margin-bottom: 38px;
   }
 
+  .loading-gray svg path.animate {
+    opacity: 1;
+  }
+
+  .loading-green svg path.animate {
+    opacity: 1;
+  }
+
   .profitability__body-text {
     color: rgba(255, 255, 255, 0.44);
   }
