--- a/src/pug/pages/en.pug
+++ b/src/pug/pages/en.pug
@@ -39,9 +39,9 @@ block vars
       {number: '04', title: 'You don\'t need to be a trader', text: 'All you need is a Telegram to get started, You don\'t have to be a trader to get started. You need to spend hours studying technical trading materials.', img: 'advantages/advantages-4.png'},
     ]
     var offersItems = [
-      {lvl: '01 LVL', percent: '20%', deposit: 'from 100 $'},
-      {lvl: '02 LVL', percent: '35%', deposit: 'from 500 $'},
-      {lvl: '03 LVL', percent: '55%', deposit: 'from 1000 $'}
+      {lvl: '01 LVL', percent: 20, deposit: 'from 100 $'},
+      {lvl: '02 LVL', percent: 35, deposit: 'from 500 $'},
+      {lvl: '03 LVL', percent: 55, deposit: 'from 1000 $'}
     ]
 
 append content
@@ -139,16 +139,18 @@ append content
                   span.offers-item__lvl= item.lvl
                 .offers-item__profitability
                   if index==0
-                    +offersCircle1
+                    +offersCircle1.offers-item__circle
                   else if index==1 
-                    +offersCircle2
+                    +offersCircle2.offers-item__circle
                   else
-                    +offersCircle3
+                    +offersCircle3.offers-item__circle
                   .offers-item__profitability-info
                     .offers-item__subtext Yield up
                     .offers-item__percent
                       span.offers-item__subtext to
-                      span.offers-item__percent-value= item.percent
+                      div.offers-item__percent-value
+                        span(data-offers-percent)= item.percent
+                        span %
                       span.offers-item__subtext /day
                 .offers-item__deposit
                   p.offers-item__subtext Deposit
@@ -165,12 +167,12 @@ append content
             h4.profitability__body-title(data-aos="fade-right" data-aos-delay="200")
               div Octo.Trade.AI charges a commission of
               div.text-green 5% from every profitable trade.
-            +loadingGray.profitability__body-loading(data-aos="clip-right" data-aos-delay="1200" data-aos-duration="3000")
+            +loadingGray.profitability__body-loading
             +image("octopus.png", 'octopus-img').profitability__body-octopus(data-aos="fade-up" data-aos-delay="400")
             div.profitability__body-text(data-aos="fade-left" data-aos-delay="600")
               p This commission is used to ensure the continued operation and development of the platform.
               p It includes support for technical infrastructure, improvement of trading algorithms and development of new functions, and also contributes to the development of the project
-            +loadingGreen.profitability__body-loading(data-aos="clip-right" data-aos-delay="1200" data-aos-duration="3000")
+            +loadingGreen.profitability__body-loading
             +image("octotrade-desk.png", 'octotrade-img').profitability__body-octotrade.profitability__body-octotrade--desktop
             +image("octotrade-mob.png", 'octotrade-img').profitability__body-octotrade.profitability__body-octotrade--mobile
             +profitabilityLine.profitability__body-line.profitability__body-line--left
