add anim for title profitab

--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -162,7 +162,7 @@ append content
     section#profitability 
       .container
         .profitability__inner 
-          h4.profitability__title Наша доходность
+          h4.profitability__title(data-aos="fade" data-aos-delay="200") Наша доходность
           .profitability__body
             h4.profitability__body-title(data-aos="fade-right" data-aos-delay="200")
               div Octo.Trade.AI  взымает комиссию в размере
