--- a/src/pug/pages/en.pug
+++ b/src/pug/pages/en.pug
@@ -162,7 +162,7 @@ append content
     section#profitability 
       .container
         .profitability__inner 
-          h4.profitability__title Our profitability
+          h4.profitability__title(data-aos="fade" data-aos-delay="200") Our profitability
           .profitability__body
             h4.profitability__body-title(data-aos="fade-right" data-aos-delay="200")
               div Octo.Trade.AI charges a commission of
