--- a/src/pug/sections/footer.pug
+++ b/src/pug/sections/footer.pug
@@ -11,9 +11,9 @@ footer#footer
 				+logoTitle
 			a(href="#").footer__privacy= privacy
 			.footer__links 
-				a(href="#").footer__link.footer__link-community
+				a(href="https://t.me/Octo_Trade_AI" target="_blank").footer__link.footer__link-community
 					+telegram
 					span= telegram_community
-				a(href="#").footer__link.footer__link-bot
+				a(href="https://t.me/OctoAIBot" target="_blank").footer__link.footer__link-bot
 					+telegram
 					span= telegram_bot
