--- a/src/pug/pages/en.pug
+++ b/src/pug/pages/en.pug
@@ -58,7 +58,7 @@ append content
           +graphLine.preview__bg-line.preview__bg-line--4(data-aos="fade" data-aos-delay="2400")
           h1.preview__title(data-aos="fade" data-aos-delay="200")= title
           p.preview__text(data-aos="fade" data-aos-delay="400") Manage your finances with OCTO TRADE Bot. <br /> Automate your trading
-          a(href='#').btn.previw__btn(data-aos="fade" data-aos-delay="600")
+          a(href='https://t.me/OctoAIBot' target="_blank").btn.previw__btn(data-aos="fade" data-aos-delay="600")
             span.text Bot →
     // ABOUT SECTION
     section#about 
@@ -98,9 +98,9 @@ append content
             each item, index in forWhomItems
               li.forWhom__item(data-aos="fade" data-aos-delay= index % 2==0 ? "400" : "200")= item
           .forWhom__btns
-            a(href='#').btn.forWhom__btn(data-aos="fade" data-aos-delay="200")
+            a(href='https://t.me/OctoAIBot' target="_blank").btn.forWhom__btn(data-aos="fade" data-aos-delay="200")
               span.text Go to bot →
-            a(href='#').btn.outline.forWhom__btn(data-aos="fade" data-aos-delay="200")
+            a(href='https://t.me/Octo_Trade_AI' target="_blank").btn.outline.forWhom__btn(data-aos="fade" data-aos-delay="200")
               span.text Go to community →
     // ADVANTAGES SECTION
     section#advantages 
@@ -156,7 +156,7 @@ append content
                   p.offers-item__subtext Deposit
                   .offers-item__deposit-value= item.deposit
           .offers__btn--wrapper(data-aos="fade" data-aos-delay="200")
-            a(href='#').btn.outline.offers__btn
+            a(href='https://t.me/OctoAIBot' target="_blank").btn.outline.offers__btn
               span.text Go to Bot →
     // PROFITABILITY SECTION
     section#profitability 
